added google ad code

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Age Calculator</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="https://emojiapi.dev/api/v1/birthday-cake/64.png" type="image/png">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8386473321256934"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="background">
